--- a/api/package.json
+++ b/api/package.json
@@ -1,25 +1,26 @@
 {
-	"name": "api",
-	"version": "1.0.0",
-	"main": "index.js",
-	"scripts": {
-		"dev": "npx ts-node src/index.ts"
-	},
-	"keywords": [],
-	"author": "",
-	"license": "ISC",
-	"description": "",
-	"dependencies": {
-		"cors": "^2.8.5",
-		"express": "^4.21.1",
-		"morgan": "^1.10.0"
-	},
-	"devDependencies": {
-		"@types/cors": "^2.8.17",
-		"@types/express": "^5.0.0",
-		"@types/morgan": "^1.9.9",
-		"@types/node": "^22.9.3",
-		"ts-node": "^10.9.2",
-		"typescript": "^5.7.2"
-	}
+  "name": "api",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "dev": "nodemon --watch src --ext ts,js,json --exec ts-node src/index.ts"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": "",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.21.1",
+    "morgan": "^1.10.0"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.0",
+    "@types/morgan": "^1.9.9",
+    "@types/node": "^22.9.3",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.7.2",
+    "nodemon": "^3.1.10"
+  }
 }
