--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.8'
+version: "3.8"
 
 services:
   api:
@@ -6,9 +6,12 @@ services:
       context: ./api
     container_name: api-service
     ports:
-      - '5000:5000'
+      - "5000:5000"
     environment:
-      - NODE_ENV=production
+      - NODE_ENV=development
+    volumes:
+      - ./api:/app
+      - /app/node_modules
     networks:
       - app-network
 
@@ -17,7 +20,7 @@ services:
       context: ./client
     container_name: frontend-service
     ports:
-      - '5173:5173'
+      - "5173:5173"
     volumes:
       - ./client/src:/app/src
       - /app/node_modules
@@ -25,6 +28,7 @@ services:
       - api
     environment:
       - VITE_API_URL=http://api:5000
+      - NODE_ENV=development
     networks:
       - app-network
 
