feat: add react-tooltip for enhanced UI interaction in CollapsibleNode component

--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-tooltip": "^5.29.0",
     "reactflow": "^11.11.4"
   },
   "devDependencies": {
